<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="nama_movie">Nama Movie</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama">Robi Dahariansyah</string>
    <string name="email">robidahariansyah8@gmail.com</string>

    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="vote">Vote</string>
    <string name="search_movie">Search Movie</string>
    <string name="search">Search</string>
    <string name="share">share</string>
    <string name="detail">detail</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="up_coming">UP COMING</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
