<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:id="@+id/linear_layout_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="@dimen/_8">

            <ImageView
                android:id="@+id/imageView_movie_fragment"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:background="@color/colorAccent"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textView_title_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8"
                android:layout_marginStart="@dimen/_8"
                android:layout_toEndOf="@id/imageView_movie_fragment"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_overview_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_title_fragment"
                android:layout_marginBottom="@dimen/_8"
                android:layout_marginStart="@dimen/_8"
                android:layout_toEndOf="@id/imageView_movie_fragment"
                android:maxLines="4"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/textView_release_date_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/linear_layout_button"
                android:layout_marginBottom="@dimen/_8"
                android:layout_marginStart="@dimen/_8"
                android:layout_toEndOf="@+id/imageView_movie_fragment"
                android:maxLines="1"
                android:text="@string/release_date" />

            <LinearLayout
                android:id="@+id/linear_layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_8"
                android:layout_toEndOf="@id/imageView_movie_fragment"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/share"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/detail"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>